generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("POSTGRES_URI")
}

model Users {
  id          Int      @id @default(autoincrement())
  fio         String?
  foto         String?
  email       String?   @unique
  username    String   @unique
  fio         String?
  password    String
  refreshToken String?
  refreshTokenExp DateTime?
  isAdmin     Boolean @default(false)
  first_name  String?
  middle_name String?
  last_name   String?
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
  banned      Boolean @default(false)
  Cards       Cards[]
}

model Cards {
  id                Int        @id @default(autoincrement())
  author            Users?     @relation(fields: [authorId], references: [id])
  authorId          Int?
  cardData          String?
  shared            Boolean    @default(false)
  sharedUrl         String?
  designPrototype   CardTypes? @relation(fields: [designPrototypeId], references: [id])
  designPrototypeId Int?
}

model CardTypes {
  id         Int     @id @default(autoincrement())
  title      String
  description String?
  designData String?
  isCustomTemplate Boolean @default(false)
  readonly Boolean @default(false)
  Cards      Cards[]
}
